Fix bug where navbar overlapped date pickers

--- a/reserver/static/reserver/styles/gunnerus.css
+++ b/reserver/static/reserver/styles/gunnerus.css
@@ -4,6 +4,10 @@
     vertical-align: baseline;
 }
 
+.bootstrap-datetimepicker-widget, .datepicker {
+	z-index: 9999;
+}
+
 .mainpage-alerts-container {
     position: absolute;
     left: 1em;
